--- a/Main/Source/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/CheckListBox/Themes/Generic.xaml
+++ b/Main/Source/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/CheckListBox/Themes/Generic.xaml
@@ -34,7 +34,7 @@
                                 <ColumnDefinition Width="Auto"/>
                                 <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
-                            <CheckBox Name="PART_CheckBox" IsChecked="{Binding IsChecked, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}" 
+                            <CheckBox Name="PART_CheckBox" IsChecked="{Binding IsSelected, RelativeSource={RelativeSource TemplatedParent}}" 
                                       Command="{Binding Command, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=local:CheckListBox}}" 
                                       CommandParameter="{Binding}"  VerticalAlignment="Center" Focusable="False"  Margin="1,1,5,1"/>
                             <Border Grid.Column="1">
@@ -43,16 +43,16 @@
                         </Grid>
                     </Border>
                     
-                    <ControlTemplate.Triggers>
-                        <!--<Trigger Property="IsChecked" Value="true">
+                    <!--<ControlTemplate.Triggers>
+                        <Trigger Property="IsChecked" Value="true">
                             <Setter TargetName="_background" Property="Background" Value="Blue"/>
                             <Setter Property="Foreground" Value="White"/>
-                        </Trigger>-->
+                        </Trigger>
                         <Trigger Property="IsMouseOver" Value="true">
                             <Setter TargetName="_background" Property="Background" Value="Blue"/>
                             <Setter Property="Foreground" Value="White"/>
                         </Trigger>
-                    </ControlTemplate.Triggers>
+                    </ControlTemplate.Triggers>-->
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
