working on the CheckListBox.  You bind your collection to the ItemsSource property.  Set the DisplayMemberPath, and the CheckedMemberPath.  It also supports Commanding.  Set the Command property to your command.  The parameter will default to the SelectedItem, which is the item that was just checked/unchecked.  It also has a SelectionChganged event.  You can obtain the object the was check/unchecked from the e.Item property of the event args.

--- a/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/CheckListBox/Themes/Generic.xaml
+++ b/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/CheckListBox/Themes/Generic.xaml
@@ -34,9 +34,8 @@
                                 <ColumnDefinition Width="Auto"/>
                                 <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
-                            <CheckBox Name="PART_CheckBox" IsChecked="{Binding IsSelected, RelativeSource={RelativeSource TemplatedParent}}" 
-                                      Command="{Binding Command, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=local:CheckListBox}}" 
-                                      CommandParameter="{Binding}"  VerticalAlignment="Center" Focusable="False"  Margin="1,1,5,1"/>
+                            <CheckBox Name="PART_CheckBox" IsChecked="{Binding IsSelected, RelativeSource={RelativeSource TemplatedParent}}"
+                                      VerticalAlignment="Center" Focusable="False"  Margin="1,1,5,1"/>
                             <Border Grid.Column="1">
                                 <ContentPresenter Margin="2" ContentSource="Content" />
                             </Border>
