--- a/Main/Source/ExtendedWPFToolkitSolution/Src/Samples/Samples/Shell.xaml
+++ b/Main/Source/ExtendedWPFToolkitSolution/Src/Samples/Samples/Shell.xaml
@@ -1,8 +1,26 @@
 ﻿<Window x:Class="Samples.Shell"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Shell" Height="300" Width="300">
-    <Grid>
+        xmlns:inf="clr-namespace:Samples.Infrastructure;assembly=Samples.Infrastructure"
+        xmlns:infCommands="clr-namespace:Samples.Infrastructure.Commands;assembly=Samples.Infrastructure"
+        xmlns:prism="http://www.codeplex.com/CompositeWPF"
+        Title="Shell" Height="600" Width="800">
+    
+    <Window.Resources>
         
+    </Window.Resources>
+    
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+
+        <TreeView prism:RegionManager.RegionName="{x:Static inf:RegionNames.NavigationRegion}"
+                  infCommands:TreeViewSelected.Command="{Binding NavigateCommand}"
+                  MinWidth="150"  />
+        
+        <ContentControl Grid.Column="1" prism:RegionManager.RegionName="{x:Static inf:RegionNames.ContentRegion}" Margin="10" />
+
     </Grid>
 </Window>
