--- a/ExtendedWPFToolkitSolution/Src/Samples/Modules/Samples.Modules.Button/Views/HomeView.xaml
+++ b/ExtendedWPFToolkitSolution/Src/Samples/Modules/Samples.Modules.Button/Views/HomeView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Samples.Modules.ButtonSpinner.HomeView"
+﻿<UserControl x:Class="Samples.Modules.Button.HomeView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -10,9 +10,9 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <TextBlock Text="ButtonSpinner Title" />
+        <TextBlock Text="Button Module Title" />
         <TextBlock Grid.Row="1" Margin="10" 
-                   Text="The ButtonSpinner control allows you to add button spinners to any element and then respond to the Spin event to manipulate that element. The Spin event lets the developer know which direction the buttons are spinning; SpinDirection.Increase indicates an increment, SpinDirection.Decrease indicates a decrement."
+                   Text="Button module text"
                    TextWrapping="Wrap" />
     </Grid>
 </UserControl>
