--- a/ExtendedWPFToolkitSolution/Src/Samples/Modules/Samples.Modules.Button/Views/NavigationView.xaml
+++ b/ExtendedWPFToolkitSolution/Src/Samples/Modules/Samples.Modules.Button/Views/NavigationView.xaml
@@ -1,9 +1,9 @@
-﻿<TreeViewItem x:Class="Samples.Modules.Button.NavigationView"
+﻿<TreeViewItem x:Class="Samples.Modules.Button.Views.NavigationView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-              Header="ButtonSpinner" Tag="Samples.Modules.Button.HomeView">
+              Header="Button Controls" Tag="Samples.Modules.Button.Views.HomeView">
 
-    <TreeViewItem Header="ButtonSpinner" />
-    <TreeViewItem Header="SplitButton" />
+    <TreeViewItem Header="ButtonSpinner" Tag="Samples.Modules.Button.Views.ButtonSpinnerView"/>
+    <TreeViewItem Header="SplitButton" Tag="Samples.Modules.Button.Views.SplitButtonView"/>
 
 </TreeViewItem>
