--- a/Main/Source/ExtendedWPFToolkitSolution/Src/Samples/Modules/Samples.Modules.Button/Views/HomeView.xaml
+++ b/Main/Source/ExtendedWPFToolkitSolution/Src/Samples/Modules/Samples.Modules.Button/Views/HomeView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Samples.Modules.Button.HomeView"
+﻿<UserControl x:Class="Samples.Modules.Button.Views.HomeView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
