--- a/Main/Source/ExtendedWPFToolkitSolution/Src/Samples/Modules/Samples.Modules.BusyIndicator/Views/NavigationView.xaml
+++ b/Main/Source/ExtendedWPFToolkitSolution/Src/Samples/Modules/Samples.Modules.BusyIndicator/Views/NavigationView.xaml
@@ -1,7 +1,8 @@
 ﻿<TreeViewItem x:Class="Samples.Modules.BusyIndicator.NavigationView"
               xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
               xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"  
+              xmlns:local="clr-namespace:Samples.Modules.BusyIndicator"
               Header="BusyIndicator" 
-              Tag="Samples.Modules.BusyIndicator.HomeView">
+              Tag="{x:Type local:HomeView}">
     
 </TreeViewItem>
