--- a/Main/Source/ExtendedWPFToolkitSolution/Src/Samples/Modules/Samples.Modules.Button/Views/NavigationView.xaml
+++ b/Main/Source/ExtendedWPFToolkitSolution/Src/Samples/Modules/Samples.Modules.Button/Views/NavigationView.xaml
@@ -1,9 +1,10 @@
 ﻿<TreeViewItem x:Class="Samples.Modules.Button.Views.NavigationView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-              Header="Button Controls" Tag="Samples.Modules.Button.Views.HomeView">
+              xmlns:views="clr-namespace:Samples.Modules.Button.Views"
+              Header="Button Controls" Tag="{x:Type views:HomeView}">
 
-    <TreeViewItem Header="ButtonSpinner" Tag="Samples.Modules.Button.Views.ButtonSpinnerView"/>
-    <TreeViewItem Header="SplitButton" Tag="Samples.Modules.Button.Views.SplitButtonView"/>
+    <TreeViewItem Header="ButtonSpinner" Tag="{x:Type views:ButtonSpinnerView}"/>
+    <TreeViewItem Header="SplitButton" Tag="{x:Type views:SplitButtonView}"/>
 
 </TreeViewItem>
