--- a/Main/Source/ExtendedWPFToolkitSolution/Src/Samples/Modules/Samples.Modules.Caclulator/Views/NavigationView.xaml
+++ b/Main/Source/ExtendedWPFToolkitSolution/Src/Samples/Modules/Samples.Modules.Caclulator/Views/NavigationView.xaml
@@ -1,9 +1,10 @@
 ﻿<TreeViewItem x:Class="Samples.Modules.Calculator.Views.NavigationView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-              Header="Calculator Controls" Tag="Samples.Modules.Calculator.Views.HomeView">
+              xmlns:views="clr-namespace:Samples.Modules.Calculator.Views"
+              Header="Calculator Controls" Tag="{x:Type views:HomeView}">
 
-    <TreeViewItem Header="Calculator" Tag="Samples.Modules.Calculator.Views.CalculatorView"/>
-    <TreeViewItem Header="CalculatorUpDown" Tag="Samples.Modules.Calculator.Views.CalculatorUpDownView"/>
+    <TreeViewItem Header="Calculator" Tag="{x:Type views:CalculatorView}"/>
+    <TreeViewItem Header="CalculatorUpDown" Tag="{x:Type views:CalculatorUpDownView}"/>
 
 </TreeViewItem>
